# trackpartuvp

./: README.md  pyproject.toml
docs/: example_inclino_visutrap.csv  script_example.py
src/trackpartuvp/: __init__.py  particles.py  platform_depth.py  plot_ecotaxa_from_df.py  tracks.py  zip_folders.py
src/trackpartuvp/funcparticles/: _thresholding.py
src/trackpartuvp/functracks/: _get_tracks.py  _inclino.py  _plot_ecotaxa.py  _plot_ecotaxa_from_df.py  _plots.py  _plots_global.py  _tracking.py
src/trackpartuvp/utils/: _utils.py
trackpartuvp/: __init__.py  particles.py  tracks.py  trap_depth.py  zip_folders.py
trackpartuvp/.spyproject/config/: workspace.ini
trackpartuvp/.spyproject/config/backups/: workspace.ini.bak
trackpartuvp/funcparticles/: _thresholding.py
trackpartuvp/functracks/: _get_tracks.py  _inclino.py  _plot_ecotaxa.py  _plot_ecotaxa_2.py  _plots.py  _plots_global.py  _tracking.py
trackpartuvp/utils/: _utils.py
