[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackpartuvp"
description = "Track particles from UVP6 raw images and estimate their speed."
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Manon Laget", email = "manon.laget@dal.ca"},
    {name = "Alexandre Accardo", email = "alexandre.accardo@imev-mer.fr"}
]
requires-python = ">=3.0"
license = "MIT"
keywords = ["particle", "imaging"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas"
]

[project.urls]
Homepage = "https://github.com/MnnLgt/trackpartuvp"
